objects/LAT_MasiveOwnerHeader__c.object
<CustomObject>
    <fields>
        <fullName>LAT_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to populate with MX, AR, BR users. It will be used in case of have more approvers in this functionality</description>
        <inlineHelpText>Field to populate with MX, AR, BR users. It will be used in case of have more approvers in this functionality. It could be used to assign more approvers.</inlineHelpText>
        <label>Second Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MasiveOwnerHeaders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MasiveOwnerHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Execution</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MasiveOwnerHeader</label>
    <nameField>
        <displayFormat>MO-{0000}</displayFormat>
        <label>MasiveOwnerHeader Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MasiveOwnerHeaders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>